# rustbench

./: .gitignore  Cargo.toml  README.md
example/: bench.rs
src/: lib.rs
